feat: Homework 18. Playwright locators - done

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {},
+  "module": "module",
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "playwright": "^1.44.1"
+  },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.44.1",
     "@types/node": "^20.12.12"
   }
