--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,10 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: npm ci
+      - name: Create env file
+        run: |
+          echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
+          echo "HTTP_CREDENTIALS_USERNAME=${{ secrets.HTTP_CREDENTIALS_USERNAME }}" >> .env
+          echo "HTTP_CREDENTIALS_PASSWORD=${{ secrets.HTTP_CREDENTIALS_PASSWORD }}" >> .env
       - name: Run your tests
         run: npx playwright test
-        env:
-          HOME: /root
