--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,11 @@ jobs:
           echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
           echo "HTTP_CREDENTIALS_USERNAME=${{ secrets.HTTP_CREDENTIALS_USERNAME }}" >> .env
           echo "HTTP_CREDENTIALS_PASSWORD=${{ secrets.HTTP_CREDENTIALS_PASSWORD }}" >> .env
+      - name: Print .env file for debugging
+        run: cat .env
       - name: Run your tests
-        run: npx playwright test
         env:
-          BASE_URL: ${{ secrets.HTTP_CREDENTIALS_USERNAME }}
+          BASE_URL: ${{ secrets.BASE_URL }}
           HTTP_CREDENTIALS_USERNAME: ${{ secrets.HTTP_CREDENTIALS_USERNAME }}
           HTTP_CREDENTIALS_PASSWORD: ${{ secrets.HTTP_CREDENTIALS_PASSWORD }}
+        run: npx playwright test
