--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
   playwright:
     name: 'Playwright Tests'
     runs-on: ubuntu-latest
+    environment: prod
     container:
       image: mcr.microsoft.com/playwright:v1.44.1-jammy
     steps:
@@ -18,10 +19,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Create env file
-        env:
-          BASE_URL: ${{ secrets.BASE_URL }}
-          HTTP_CREDENTIALS_USERNAME: ${{ secrets.HTTP_CREDENTIALS_USERNAME }}
-          HTTP_CREDENTIALS_PASSWORD: ${{ secrets.HTTP_CREDENTIALS_PASSWORD }}
         run: |
           echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
           echo "HTTP_CREDENTIALS_USERNAME=${{ secrets.HTTP_CREDENTIALS_USERNAME }}" >> .env
